--- a/src/DistLargePrint/Reports/DistLargeList.xaml
+++ b/src/DistLargePrint/Reports/DistLargeList.xaml
@@ -11,7 +11,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="1.5cm"/>
             <RowDefinition Height="0.65cm"/>
-            <RowDefinition Height="2.6cm"/>
+            <RowDefinition Height="2cm"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -29,11 +29,11 @@
                 </Style>
             </Grid.Resources>
 
-            <TextBlock Grid.Column="0" Text="大仕分リスト" FontSize="40"/>
-            <TextBlock Grid.Column="1" Text="{Binding CreateDate, StringFormat=yyyy/MM/dd HH:mm:ss}" FontSize="25"/>
+            <TextBlock Grid.Column="0" Text="大仕分リスト" FontSize="30"/>
+            <TextBlock Grid.Column="1" Text="{Binding CreateDate, StringFormat=yyyy/MM/dd HH:mm:ss}"/>
             <StackPanel Grid.Column="2" Orientation="Horizontal">
-                <TextBlock Text="PAGE :" FontSize="25"/>
-                <TextBlock Text="{Binding PageInfo}" FontSize="25"/>
+                <TextBlock Text="PAGE :"/>
+                <TextBlock Text="{Binding PageInfo}"/>
             </StackPanel>
         </Grid>
 
@@ -59,9 +59,17 @@
 
         <Grid Grid.Row="2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="1.3cm"/>
-                <RowDefinition Height="1.3cm"/>
+                <RowDefinition Height="1cm"/>
+                <RowDefinition Height="1cm"/>
             </Grid.RowDefinitions>
+
+            <Grid.Resources>
+                <Style TargetType="TextBlock">
+                    <Setter Property="FontSize" Value="14"/>
+                    <Setter Property="VerticalAlignment" Value="Bottom"/>
+                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                </Style>
+            </Grid.Resources>
 
             <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
@@ -72,36 +80,63 @@
                     <ColumnDefinition Width="3cm"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" Text="品番" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="1" Text="JANコード" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="2" Text="品名" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="3" Text="入数" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-                <TextBlock Grid.Column="4" Text="総数&#xa;箱/個" VerticalAlignment="Bottom"/>
+                <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1,1,0,0">
+                    <TextBlock Text="品番"/>
+                </Border>
+
+                <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1,1,0,0">
+                    <TextBlock Text="JANコード"/>
+                </Border>
+
+                <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1,1,0,0">
+                    <TextBlock Text="品名"/>
+                </Border>
+
+                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1,1,0,0">
+                    <TextBlock Text="入数"/>
+                </Border>
+
+                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1,1,1,0">
+                    <TextBlock Text="総数&#xa;箱/個"/>
+                </Border>
             </Grid>
 
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="4cm"/>
-                    <ColumnDefinition Width="2cm"/>
-                    <ColumnDefinition Width="2cm"/>
-                    <ColumnDefinition Width="2cm"/>
-                    <ColumnDefinition Width="2cm"/>
-                    <ColumnDefinition Width="2cm"/>
-                    <ColumnDefinition Width="2cm"/>
-                    <ColumnDefinition Width="2cm"/>
-                    <ColumnDefinition Width="5cm"/>
-                    <ColumnDefinition Width="5cm"/>
+                    <ColumnDefinition Width="3cm"/>
+                    <ColumnDefinition Width="2.5cm"/>
+                    <ColumnDefinition Width="3.5cm"/>
+                    <ColumnDefinition Width="3.5cm"/>
+                    <ColumnDefinition Width="3.5cm"/>
+                    <ColumnDefinition Width="6cm"/>
+                    <ColumnDefinition Width="6cm"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="1" Text="ブロック" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="2" Text="予定数&#xa;箱/バラ" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-                <TextBlock Grid.Column="3" Text="総個数" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="4" Text="仕分残数&#xa;箱/バラ" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-                <TextBlock Grid.Column="5" Text="総個数" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="6" Text="仕分済数&#xa;箱/バラ" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-                <TextBlock Grid.Column="7" Text="総個数" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="8" Text="作業日時" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="9" Text="作業担当者" VerticalAlignment="Bottom"/>
+                <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1,0,0,0.5"/>
+
+                <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1,1,0,0.5">
+                    <TextBlock Text="ブロック"/>
+                </Border>
+
+                <Border Grid.Column="2" BorderBrush="Black" BorderThickness="1,1,0,0.5">
+                    <TextBlock Text="予定数&#xa;箱/バラ　総個数"/>
+                </Border>
+
+                <Border Grid.Column="3" BorderBrush="Black" BorderThickness="1,1,0,0.5">
+                    <TextBlock Text="仕分残数&#xa;箱/バラ　総個数"/>
+                </Border>
+
+                <Border Grid.Column="4" BorderBrush="Black" BorderThickness="1,1,0,0.5">
+                    <TextBlock Text="仕分済数&#xa;箱/バラ　総個数"/>
+                </Border>
+
+                <Border Grid.Column="5" BorderBrush="Black" BorderThickness="1,1,0,0.5">
+                    <TextBlock Text="作業日時"/>
+                </Border>
+
+                <Border Grid.Column="6" BorderBrush="Black" BorderThickness="1,1,1,0.5">
+                    <TextBlock Text="作業担当者"/>
+                </Border>
             </Grid>
         </Grid>
 
