0007163: 集約得意先情報入力　「子得意先コード」入力時、得意先マスターに無いコードを入力すると「得意先名称」が表示されないが次々と入力ができます。『登録』ボタン押下でエラーにするのであれば徳先マスタに無い時点でエラーにして下さい。 説明	　「集約得意先コード」も同様 再現方法	エラーになる事は確認しました。 エラーウィンドウを『ＯＫ』ボタンで消去した時に、カーソルをエラーのあった「子得意先コード」の位置に戻して下さい。 いちいちマウスで間違った「子得意先コード」の位置に戻さないといけないので使い勝手が悪いです。

--- a/src/Customer/Views/InputCustomer.xaml
+++ b/src/Customer/Views/InputCustomer.xaml
@@ -5,6 +5,7 @@
              prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:utils="clr-namespace:WindowLib.Utils;assembly=WindowLib"
              xmlns:controls="clr-namespace:WindowLib.Views;assembly=WindowLib"
+             xmlns:b="clr-namespace:WindowLib.Behaviors;assembly=WindowLib"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              Loaded="UserControl_Loaded">
@@ -238,6 +239,10 @@
                                 </Style>
                             </DataGrid.ColumnHeaderStyle>
 
+                            <i:Interaction.Behaviors>
+                                <b:DataGridFocusBehavior Column="{Binding GridFocusColumnIndex,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" Row="{Binding GridFocusRowIndex,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" />
+                            </i:Interaction.Behaviors>
+                            
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="RowEditEnding">
                                     <i:InvokeCommandAction Command="{Binding EndCodeEdit}" CommandParameter="CdTokuisakiChild" />
