画面と帳票の行を交互に染色するよう機能追加(Standard.xamlのAlternateGridBrushで変更可能) ・大仕分リスト発行 ・仕分・欠品リスト発行 ・積付表発行 ・作業報告書発行 ・タカハタDAS対象外仕分リスト発行

--- a/src/DistLargePrint/Reports/DistLargeRow.xaml
+++ b/src/DistLargePrint/Reports/DistLargeRow.xaml
@@ -1,7 +1,17 @@
 ﻿<UserControl x:Class="DistLargePrint.Reports.DistLargeRow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             FontSize="14">
+             FontSize="14" Width="28cm" HorizontalAlignment="Left">
+
+    <UserControl.Style>
+        <Style TargetType="{x:Type UserControl}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsEven, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Value="true">
+                    <Setter Property="Background" Value="{StaticResource AlternateGridBrush}"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Style>
 
     <Grid Height="0.5cm">
         <Grid.ColumnDefinitions>
