--- a/src/DistLargePrint/Views/MainDistLargePrint.xaml
+++ b/src/DistLargePrint/Views/MainDistLargePrint.xaml
@@ -94,7 +94,8 @@
         <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid}" SettingsKey="DistLargePrintColumns"/>
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding DistLargePrints}" AutoGenerateColumns="False"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None">
+                  SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None"
+                  AlternatingRowBackground="{StaticResource AlternateGridBrush}">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="品番" Binding="{Binding CdHimban}"/>
