--- a/src/WorkReport/Views/MainWorkReport.xaml
+++ b/src/WorkReport/Views/MainWorkReport.xaml
@@ -65,7 +65,8 @@
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding WorkReports}"
                   AutoGenerateColumns="False"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None">
+                  SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None"
+                  AlternatingRowBackground="{StaticResource AlternateGridBrush}">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="納品日" Binding="{Binding DispDtDelivery}"/>
