画面と帳票で交互染色を個別設定で出来るように変更。

--- a/src/DistLargePrint/Reports/DistLargeRow.xaml
+++ b/src/DistLargePrint/Reports/DistLargeRow.xaml
@@ -7,7 +7,7 @@
         <Style TargetType="{x:Type UserControl}">
             <Style.Triggers>
                 <DataTrigger Binding="{Binding IsEven, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Value="true">
-                    <Setter Property="Background" Value="{StaticResource AlternateGridBrush}"/>
+                    <Setter Property="Background" Value="{StaticResource AlternateReportGridBrush}"/>
                 </DataTrigger>
             </Style.Triggers>
         </Style>
