--- a/src/DistProg/Views/MainDistProg.xaml
+++ b/src/DistProg/Views/MainDistProg.xaml
@@ -81,7 +81,8 @@
             <controls:GridColumnSetting TargetGrid="{Binding ElementName=dataGrid}" SettingsKey="DistProgColumns"/>
             <DataGrid x:Name="dataGrid" ItemsSource="{Binding DistProgs}" AutoGenerateColumns="False"
                       IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                      SelectionUnit="FullRow" FrozenColumnCount="0">
+                      SelectionUnit="FullRow" FrozenColumnCount="0"
+                      AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="エリア" Binding="{Binding IdPc}" ElementStyle="{StaticResource CenterTextElement}"/>
