--- a/src/DistLargePrint/Views/MainDistLargePrint.xaml
+++ b/src/DistLargePrint/Views/MainDistLargePrint.xaml
@@ -95,7 +95,7 @@
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding DistLargePrints}" AutoGenerateColumns="False"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None"
-                  AlternatingRowBackground="{StaticResource AlternateGridBrush}">
+                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="品番" Binding="{Binding CdHimban}"/>
