--- a/src/WorkReport/Views/MainWorkReport.xaml
+++ b/src/WorkReport/Views/MainWorkReport.xaml
@@ -66,7 +66,7 @@
                   AutoGenerateColumns="False"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
                   SelectionUnit="FullRow" FrozenColumnCount="0" GridLinesVisibility="None"
-                  AlternatingRowBackground="{StaticResource AlternateGridBrush}">
+                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Header="納品日" Binding="{Binding DispDtDelivery}"/>
