--- a/src/lib/SelDistGroupLib/Views/SelDistGroupDlg.xaml
+++ b/src/lib/SelDistGroupLib/Views/SelDistGroupDlg.xaml
@@ -17,7 +17,7 @@
 
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Margin="5">
-            <Grid Margin="0" Visibility="{Binding LineVisiblity}">
+            <Grid Margin="0" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="6*"/>
                     <ColumnDefinition Width="4*"/>
@@ -41,7 +41,7 @@
                 <TextBlock Grid.Column="2" Text="{Binding DistGroup.NmDistGroup}" VerticalAlignment="Center" Margin="20 0 0 0" />
             </Grid>
 
-            <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="20,5,5,5" Visibility="{Binding ShipDtVisiblity}">
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="20,5,5,5" >
                 <TextBlock Grid.Column="0" Text="納品日:" VerticalAlignment="Center" TextAlignment="Center" 
                            Width="110" Margin="3"/>
                 <DatePicker Grid.Column="1" SelectedDate="{Binding DtDelivery}" PreviewKeyDown="DatePicker_PreviewKeyDown" Language="ja"/>
