0007187: 積付表発行　「表示器№」の左側に「ブロック」を追加して下さい。画面の初期ソート順を「ブロック・表示器№・出荷バッチ・コース・配送順・得意先コード」にして下さい。

--- a/src/StowageListPrint/Views/MainStowageListPrint.xaml
+++ b/src/StowageListPrint/Views/MainStowageListPrint.xaml
@@ -104,6 +104,7 @@
             </DataGrid.InputBindings>
 
             <DataGrid.Columns>
+                <DataGridTextColumn Header="ブロック" Binding="{Binding CdBlock}"/>
                 <DataGridTextColumn Header="表示器" Binding="{Binding Tdunitcode}"/>
                 <DataGridTextColumn Header="出荷バッチ" Binding="{Binding CdShukkaBatch}"/>
                 <DataGridTextColumn Header="コース" Binding="{Binding CdCourse}"/>
