メンテナンス:画面DataGridの行の交互色付け機能追加 ・仕分グループ登録 ・仕分ブロック順登録 ・集約得意先登録 ・座席しきい値情報登録 ・大仕分グループ情報登録 ・座席マッピングポジション

--- a/src/Customer/Views/MainCustomer.xaml
+++ b/src/Customer/Views/MainCustomer.xaml
@@ -68,7 +68,8 @@
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding Customers}" CurrentItem="{Binding CurrentCustomer, Mode=TwoWay}" AutoGenerateColumns="False"
                   SelectedItem="{Binding CurrentCustomer, Mode=TwoWay}"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0">
+                  SelectionUnit="FullRow" FrozenColumnCount="0"
+                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
             <DataGrid.InputBindings>
                 <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding LeftDoubleClick}"/>
