--- a/src/DistBlock/Views/MainDistBlock.xaml
+++ b/src/DistBlock/Views/MainDistBlock.xaml
@@ -67,7 +67,8 @@
         <DataGrid x:Name="dataGrid" ItemsSource="{Binding DistBlocks}" CurrentItem="{Binding CurrentDistBlock, Mode=TwoWay}" AutoGenerateColumns="False"
                   SelectedItem="{Binding CurrentDistBlock, Mode=TwoWay}"
                   IsReadOnly="True" VerticalScrollBarVisibility="Auto" IsSynchronizedWithCurrentItem="True"
-                  SelectionUnit="FullRow" FrozenColumnCount="0">
+                  SelectionUnit="FullRow" FrozenColumnCount="0"
+                  AlternatingRowBackground="{StaticResource AlternateDisplayGridBrush}">
 
             <DataGrid.InputBindings>
                 <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding LeftDoubleClick}"/>
