0007184: 大仕分リスト発行　一番最初に表示される【大仕分グループ選択画面】ですが、「大仕分グループ」を変更し、「納品日」を変更すると「大仕分グループ」が一番先頭の選択に戻ります。「大仕分グループ」は変更したらそのままにして下さい。

--- a/src/DistLargePrint/Views/SelectDistLargeGroupDlg.xaml
+++ b/src/DistLargePrint/Views/SelectDistLargeGroupDlg.xaml
@@ -15,7 +15,7 @@
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="5">
             <TextBlock Text="大仕分グループ" Width="150" VerticalAlignment="Center" Margin="3"/>
             <TextBlock Text=":" VerticalAlignment="Center" Margin="3"/>
-            <ComboBox x:Name="LargeDistGroupCombo" SelectedIndex="{Binding LargeDistGroupIndex}" ItemsSource="{Binding LargeDistGroupCombo}"
+            <ComboBox x:Name="LargeDistGroupCombo" SelectedItem="{Binding LargeDistGroupItem}" ItemsSource="{Binding LargeDistGroupCombo}"
                       DisplayMemberPath="Name" Width="150" Margin="3"/>
         </StackPanel>
 
